--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -44,7 +44,7 @@ input {
 button {
   height: 40px;
   border-radius: 0.5rem;
-  width: 100px;
+  width: 120px;
   padding: 0rem 1rem;
   border: none;
   align-self: center;
@@ -75,9 +75,29 @@ input[type="submit"]:hover {
 
 .eduDate {
   width: 50%;
+  margin-bottom: 1rem;
+}
+
+.role {
+  margin-bottom: 1rem;
 }
 
 .grey {
   background-color: #98a2b33d;
-  padding: 1rem 0rem;
+}
+
+.delete-icon {
+  color: red;
+  text-align: end;
+  width: 90%;
+  margin: 0 auto -1rem auto;
+  padding-top: 0.5rem;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.3rem;
+  transition: all 0.1s;
+}
+
+.delete-icon:hover {
+  color: darkred;
 }
